Fix property styles overlappings

--- a/src/components/Infobox/InfoboxProperty/infoboxProperty.scss
+++ b/src/components/Infobox/InfoboxProperty/infoboxProperty.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 24px;
+  height: 31px;
 }
 
 .infobox-divider-container {
